fix wrap

--- a/src/file/file-bookmark-theme.css
+++ b/src/file/file-bookmark-theme.css
@@ -23,8 +23,8 @@ body.dark {
 /*----- bookmark-item -----*/
 
 .bookmark-item {
-    background-color: var(--checkboxWarpColor);
-    border-color: var(--checkboxWarpBorderColor);
+    background-color: var(--checkboxWrapColor);
+    border-color: var(--checkboxWrapBorderColor);
 }
 
 /*.bookmark-item-description {
