--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -178,7 +178,7 @@ a {
     align-self: center;
 }
 
-.nav-logo-warp {
+.nav-logo-wrap {
     display: flex;
     align-items: center;
 }
